# rusttwald

./: .gitignore  Cargo.toml  README.md  api-custom.json  api.json  generate.sh  original-api.json
client/: .openapi-generator-ignore  Cargo.toml  README.md
client/.openapi-generator/: FILES
client/docs/: AppApi.md  AppGetMissingDependenciesForAppinstallation200Response.md  AppReplaceDatabaseRequest.md  AppRequestAppinstallation201Response.md  ArticleApi.md  BackupCreateProjectBackupRequest.md  BackupCreateProjectBackupScheduleRequest.md  BackupUpdateProjectBackupScheduleRequest.md  ContractCancelContractItemTermination200Response.md  ContractTerminateContractItemRequest.md  ContractTerminateContractRequest.md  ContributorRotateSecretForExtensionInstanceRequest.md  ConversationCreateConversationRequest.md  ConversationCreateMessage201Response.md  ConversationCreateMessageRequest.md  ConversationListMessagesByConversation200ResponseInner.md  ConversationRequestFileUpload201Response.md  ConversationRequestFileUpload201ResponseRules.md  ConversationRequestFileUpload201ResponseRulesProperties.md  ConversationRequestFileUpload201ResponseRulesPropertiesImageDimensionsMax.md  ConversationUpdateConversationRequest.md  CronjobApi.md  CronjobCreateExecution201Response.md  CronjobUpdateCronjobAppIdRequest.md  CronjobUpdateCronjobRequest.md  CronjobUpdateCronjobRequestDestination.md  CustomerAcceptCustomerInviteRequest.md  CustomerCreateCustomer201Response.md  CustomerCreateCustomerInviteRequest.md  CustomerDeleteCustomer200Response.md  DatabaseApi.md  (+241 more)
client/src/: lib.rs
(+1035 files in other folders)
