[package]
name = "rusttwald"
version = "0.1.1"
authors = ["cloudsftp"]
description = "Inofficial Rust API client for the mittwald. API."
# Override this license by providing a License Object in the OpenAPI.
license = "GPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/cloudsftp/rusttwald/tree/latest"
keywords = ["mittwald", "API", "REST"]


[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
